# movement_datalogger

./: CMakeLists.txt  README.md  movement_datalogger.c
dados/: imu_data.csv
lib/: mpu6050.c  mpu6050.h  sd_card.c  sd_card.h
scripts/: plotaDados.py
